--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
       text-align:center;
       font-family: Helvetica, sans-serif;
   }
+
+  i {
+    display: inline-block;
+    font-style: normal;
+    animation: spin 1s infinite linear;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+
   </style>
 
   <body>
@@ -22,6 +36,6 @@
       <img src="images/fr00tball-2019.png"/>
       <br>
      <!-- <img src="https://media.giphy.com/media/GKliD9i20iP8k/giphy.gif"/>/-->
-    <p>👋 ⚽️    <br>Registration on its way...</p>
+    <p>👋 <i>⚽</i>️   <br>Registration on its way...</p>
   </body>
 </html>
