--- a/index.html
+++ b/index.html
@@ -1,33 +1,13 @@
 <!doctype html>
 <html>
   <head>
-    <title>fr00tball at New Adventures (naconf) in Nottingham. Friday 25 Jan 2019  </title>
+    <title>fr00tball at New Adventures (naconf) in Nottingham. Friday 25 Jan 2019</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/fonts.css">
+   
   </head>
 
   <style type="text/css">
-
-  *{
-      margin:0;
-      padding: 0;
-  }
-  
-  body{
-      text-align:center;
-      font-family: Helvetica, sans-serif;
-  }
-
-  i {
-    display: inline-block;
-    font-style: normal;
-    animation: spin 1s infinite linear;
-}
-
-@keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 
   </style>
 
