--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <h1></h1>
       <img src="images/fr00tball-2019.png"/>
       <br>
-    <p>👋 <i>⚽</i>️   <br>Registration on its way...</p>
+    <p>👋 <i>⚽</i>️</p>
+    <p>Registration on its way...</p>
   </body>
 </html>
