Fixing some CSS
Mobile state fixed. Did CSS grid properly.
Hide first register link on small screens.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="https://www.google.com/maps/dir/Wilford+Village+Tram+Stop/Gresham+Sports+Park,+Gresham+Park+Rd,+West+Bridgford,+Nottingham+NG2+7YF/@52.9328553,-1.1561737,15.99z/data=!4m14!4m13!1m5!1m1!1s0x4879c23687b321e5:0x398d9166aefcf4a6!2m2!1d-1.15568!2d52.93574!1m5!1m1!1s0x4879c24ae58c05bf:0xb0663f2759d0603f!2m2!1d-1.1528359!2d52.9305744!3e3?shorturl=1">Directions</a> · </li>
                 <li><a href="http://twitter.com/fr00tball">Updates</a> · </li>
-                <li><a href="mailto:help@fr00tball.com">Email us</a> · </li>
+                <li><a href="mailto:help@fr00tball.com">Email us</a><span class="dot">· </span></li>
                 <li><a href="https://goo.gl/forms/5NzrmDCCAfWgMoU83">Register →</a></li>
             </ul>
             
@@ -58,9 +58,9 @@
 
                 <img class="collage" src="images/sidebar-collage.png">
 
-                <blockquote class="bq-one"><img src="images/quote-2.jpg">“Good laugh at fr00tball today—the trophy getting broke before kick off was definitely a highlight! #naconf”</blockquote>
-                <blockquote class="bq-two"><img src="images/quote.jpg">“I asked random people to make a team with me, and I discovered an amazing designer :D”</blockquote>
-                <blockquote class="bq-three"><img src="images/quote-3.jpg">“Great way to end a few days away at a conference. Love fr00tball #naconf”</blockquote>
+                <blockquote><img src="images/quote-2.jpg">“Good laugh at fr00tball today—the trophy getting broke before kick off was definitely a highlight! #naconf”</blockquote>
+                <blockquote><img src="images/quote.jpg">“I asked random people to make a team with me, and I discovered an amazing designer :D”</blockquote>
+                <blockquote><img src="images/quote-3.jpg">“Great way to end a few days away at a conference. Love fr00tball #naconf”</blockquote>
             </div>
 
           </div>
