--- a/site.html
+++ b/site.html
@@ -58,9 +58,9 @@
 
                 <img class="collage" src="images/sidebar-collage.png">
 
-                <blockquote class="bq-one"><img src="images/quote-2.jpg">“Good laugh at fr00tball today—the trophy getting broke before kick off was definitely a highlight! #naconf”</blockquote>
-                <blockquote class="bq-two"><img src="images/quote.jpg">“I asked random people to make a team with me, and I discovered an amazing designer :D”</blockquote>
-                <blockquote class="bq-three"><img src="images/quote-3.jpg">“Great way to end a few days away at a conference. Love fr00tball #naconf”</blockquote>
+                <blockquote><img src="images/quote-2.jpg">“Good laugh at fr00tball today—the trophy getting broke before kick off was definitely a highlight! #naconf”</blockquote>
+                <blockquote><img src="images/quote.jpg">“I asked random people to make a team with me, and I discovered an amazing designer :D”</blockquote>
+                <blockquote><img src="images/quote-3.jpg">“Great way to end a few days away at a conference. Love fr00tball #naconf”</blockquote>
             </div>
 
           </div>
