Added Code of Conduct
Just to stop people being dicks.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <h1>Fr00tball <span>in </span><span id="countdown"></span></h1> 
 
             <ul>
+                <li><a href="code-of-conduct.html">Code of Conduct</a> · </li>
                 <li><a href="https://www.google.com/maps/dir/Wilford+Village+Tram+Stop/Gresham+Sports+Park,+Gresham+Park+Rd,+West+Bridgford,+Nottingham+NG2+7YF/@52.9328553,-1.1561737,15.99z/data=!4m14!4m13!1m5!1m1!1s0x4879c23687b321e5:0x398d9166aefcf4a6!2m2!1d-1.15568!2d52.93574!1m5!1m1!1s0x4879c24ae58c05bf:0xb0663f2759d0603f!2m2!1d-1.1528359!2d52.9305744!3e3?shorturl=1">Directions</a> · </li>
                 <li><a href="http://twitter.com/fr00tball">Updates</a> · </li>
                 <li><a href="mailto:help@fr00tball.com">Email us</a><span class="dot">· </span></li>
