--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -52,7 +52,7 @@
 
               <p>If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact an organiser immediately. Organisers can be identified as they&#39;ll be wearing branded clothing and/or badges.</p>
 
-              <p>Organisers will be happy to help participants contact hotel/venue security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of the event. We value your attendance.</p>
+              <p>Organisers will be happy to help participants contact venue security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of the event. We value your attendance.</p>
 
               <p>We expect participants to follow these rules at fr00tball and fr00tball-related social events.</p>
 
