--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>fr00tball at New Adventures (naconf) in Nottingham. Friday 25 Jan 2019</title>
+    <title>fr00tball at New Adventures (naconf) in Nottingham. Friday 24 Jan 2019</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/fonts.css">
@@ -24,7 +24,7 @@
           </div>
           <div id="main-info">
               <div id="register">
-                <p><b>Friday 25 Jan</b><br>2-5pm<br>Gresham Sports Centre, Nottingham </p>
+                <p><b>Friday 24 Jan</b><br>2-4pm<br>Gresham Sports Centre, Nottingham </p>
                 <a class="btn" href="https://goo.gl/forms/5NzrmDCCAfWgMoU83">Register → </a>
                 <span class="hint">Teams and individuals welcome</span>
               </div>
@@ -38,8 +38,8 @@
             <h2>Proud to be part of the amazing New Adventures Conference in Nottingham</h2>
 
             <h3>What is fr00tball?</h3>
-            <p>We're offering you a once in a lifetime opportunity to play football in a slightly competitive, non-judgemental environment.</p>
-            <p>You don't have to be a pro, in fact if you've never played at all, we'd love you to come along for a kickabout and enjoy the fun.                     
+            <p>We're offering you a once in a lifetime (it's happened at every NAconf) opportunity to play football in a non-judgemental environment.</p>
+            <p>You don't have to be a pro, in fact if you've never played at all, we'd love you to come along for a kickabout and enjoy the fun.  </p>                   
             <p>Spectators and cheerleaders are more than welcome, in fact they would be greatly appreciated.</p>
             <br>
             <h3>Where is it?</h3>
@@ -71,7 +71,7 @@
 
     <script>
     // Set the date we're counting down to
-    var countDownDate = new Date("Jan 25, 2019 14:00").getTime();
+    var countDownDate = new Date("Jan 24, 2020 14:00").getTime();
 
     // Update the count down every 1 second
     var x = setInterval(function() {
